--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
         command: >
             sh -c "
                 php artisan migrate --force &&
+                php artisan filament:assets &&
                 php artisan octane:frankenphp --host=0.0.0.0 --port=8080
             "
 
