--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
     app:
         build: .
         ports:
-            - "8080:8080"
+            - "8000:8000"
         volumes:
             - .:/app
         environment:
@@ -18,7 +18,7 @@ services:
             sh -c "
                 php artisan migrate --force &&
                 php artisan filament:assets &&
-                php artisan octane:frankenphp --host=0.0.0.0 --port=8080
+                php artisan octane:frankenphp
             "
 
     db:
