Fix Github Actions

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          IMAGE_NAME=ghcr.io/${{ github.repository_owner }}/sato:latest
+          IMAGE_NAME=ghcr.io/${{ github.repository }}:latest
           docker build -t $IMAGE_NAME .
           docker push $IMAGE_NAME
 
@@ -29,8 +29,8 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            sudo mkdir -p /var/www/sato
-            sudo chown -R $USER:$USER /var/www/sato
+            sudo mkdir -p /var/www
+            sudo chown -R $USER:$USER /var/www
             cd /var/www
 
             mkdir -p ~/.ssh
@@ -38,7 +38,7 @@ jobs:
 
             # Clone repo sato
             if [ ! -d "sato/.git" ]; then
-              git clone ${{ github.repository_owner }}:${{ secrets.GHCR_TOKEN }}@github.com:${{ github.repository_owner }}/sato.git
+              git clone ${{ github.repository_owner }}:${{ secrets.GHCR_TOKEN }}@github.com:${{ github.repository }}.git
             fi
 
             # Enter folder sato
