--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,10 +51,10 @@ jobs:
             # Create .env.production
             cat > .env.production <<EOL
               APP_NAME=Laravel
-              APP_ENV=${{ secrets.APP_ENV }}
-              APP_KEY=${{ secrets.APP_KEY }}
+              APP_ENV=${{ vars.APP_ENV }}
+              APP_KEY=${{ vars.APP_KEY }}
               APP_DEBUG=false
-              APP_URL=${{ secrets.APP_URL }}
+              APP_URL=${{ vars.APP_URL }}
 
               DB_CONNECTION=${{ secrets.DB_CONNECTION }}
               DB_HOST=${{ secrets.DB_HOST }}
