--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,26 +50,26 @@ jobs:
 
             # Create .env.production
             cat > .env.production <<EOL
-              APP_NAME=Laravel
-              APP_ENV=${{ vars.APP_ENV }}
-              APP_KEY=${{ vars.APP_KEY }}
-              APP_DEBUG=false
-              APP_URL=${{ vars.APP_URL }}
+            APP_NAME=Laravel
+            APP_ENV=${{ vars.APP_ENV }}
+            APP_KEY=${{ vars.APP_KEY }}
+            APP_DEBUG=false
+            APP_URL=${{ vars.APP_URL }}
 
-              DB_CONNECTION=${{ secrets.DB_CONNECTION }}
-              DB_HOST=${{ secrets.DB_HOST }}
-              DB_PORT=${{ secrets.DB_PORT }}
-              DB_DATABASE=${{ secrets.DB_DATABASE }}
-              DB_USERNAME=${{ secrets.DB_USERNAME }}
-              DB_PASSWORD=${{ secrets.DB_PASSWORD }}
+            DB_CONNECTION=${{ secrets.DB_CONNECTION }}
+            DB_HOST=${{ secrets.DB_HOST }}
+            DB_PORT=${{ secrets.DB_PORT }}
+            DB_DATABASE=${{ secrets.DB_DATABASE }}
+            DB_USERNAME=${{ secrets.DB_USERNAME }}
+            DB_PASSWORD=${{ secrets.DB_PASSWORD }}
 
-              POSTGRES_DB=${{ secrets.DB_DATABASE }}
-              POSTGRES_USER${{ secrets.DB_USERNAME }}
-              POSTGRES_PASSWORD${{ secrets.DB_PASSWORD }}
+            POSTGRES_DB=${{ secrets.DB_DATABASE }}
+            POSTGRES_USER=${{ secrets.DB_USERNAME }}
+            POSTGRES_PASSWORD=${{ secrets.DB_PASSWORD }}
 
-              CACHE_DRIVER=file
-              QUEUE_CONNECTION=database
-              SESSION_DRIVER=file
+            CACHE_DRIVER=file
+            QUEUE_CONNECTION=database
+            SESSION_DRIVER=file
             EOL
 
             # Login to docker
