Update all docker thing

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Build and push Docker image
         run: |
           IMAGE_NAME=ghcr.io/${{ github.repository }}:latest
-          docker build -t $IMAGE_NAME .
+          docker build -f Dockerfile.prod -t $IMAGE_NAME .
           docker push $IMAGE_NAME
 
       - name: Deploy to server
