--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -22,7 +22,7 @@ RUN apt update && apt install -y \
 # Install Composer
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
-COPY . ./app
+COPY . .
 
 RUN composer install --no-dev --optimize-autoloader
 
