--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -6,17 +6,26 @@ services:
     container_name: sato_app
     env_file:
       - .env.development
-    ports:
-      - "80:8000"
     depends_on:
-      - db
-    restart: unless-stopped
+      db:
+        condition: service_healthy
     command: >
       sh -c "
         php artisan migrate --force &&
-        php artisan filament:assets
-        frankenphp run --config /app/Caddyfile
+        php artisan filament:assets &&
+        php-fpm
       "
+
+  nginx:
+    image: nginx:alpine
+    container_name: sato_nginx
+    ports:
+        - "8000:80"
+    volumes:
+        - .:/app
+        - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+        - app
 
   db:
     image: postgres:15
@@ -29,7 +38,7 @@ services:
     ports:
       - "5432:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U $${DB_USERNAME} -d $${DB_DATABASE}"]
+      test: [ "CMD-SHELL", "pg_isready -U $${DB_USERNAME} -d $${DB_DATABASE}" ]
       interval: 10s
       retries: 5
 
