--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,8 +1,6 @@
 services:
   app:
-    build:
-      context: .
-      dockerfile: Dockerfile.dev
+    image: ghcr.io/fikrifyanto/sato:latest
     container_name: sato_app
     env_file:
       - .env.development
@@ -20,7 +18,7 @@ services:
     image: nginx:alpine
     container_name: sato_nginx
     ports:
-        - "8000:80"
+        - "80:80"
     volumes:
         - .:/app
         - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
