--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,6 +1,8 @@
 services:
   app:
-    image: ghcr.io/fikrifyanto/sato:latest
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
     container_name: sato_app
     env_file:
       - .env.development
