--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -10,9 +10,10 @@ server {
     }
 
     location ~ \.php$ {
-        include fastcgi.conf;
-        fastcgi_pass php:9000;
+        include fastcgi_params;
+        fastcgi_pass app:9000;
         fastcgi_index index.php;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
 
     location ~ /\. {
