--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -31,6 +31,8 @@ services:
     image: postgres:15
     container_name: sato_db
     restart: unless-stopped
+    env_file:
+      - .env.development
     environment:
       POSTGRES_DB: ${DB_DATABASE}
       POSTGRES_USER: ${DB_USERNAME}
