--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -22,10 +22,16 @@ RUN apt update && apt install -y \
 # Install Composer
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
+# Install Node.js
+RUN curl -fsSL https://deb.nodesource.com/setup_20.x | bash - \
+    && apt install -y nodejs
+
 COPY . .
 
 RUN composer install --no-dev --optimize-autoloader
 
-RUN chown -R www-data:www-data storage bootstrap/cache
+RUN npm install && npm run build
+
+RUN chown -R www-data:www-data storage bootstrap/cache public/build
 
 EXPOSE 9000
