--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -22,7 +22,7 @@ services:
     ports:
         - "80:80"
     volumes:
-        - .:/app
+        - ./public:/app/public
         - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
         - app
