--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -9,6 +9,8 @@ services:
     depends_on:
       db:
         condition: service_healthy
+    volumes:
+      - public_build:/app/public/build
     command: >
       sh -c "
         php artisan migrate --force &&
@@ -20,12 +22,12 @@ services:
     image: nginx:alpine
     container_name: sato_nginx
     ports:
-        - "80:80"
+      - "80:80"
     volumes:
-        - ./public:/app/public
-        - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - public_build:/app/public/build
+      - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
-        - app
+      - app
 
   db:
     image: postgres:15
