--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -10,7 +10,7 @@ services:
       db:
         condition: service_healthy
     volumes:
-      - public_build:/app/public/build
+      - public_build:/app
     command: >
       sh -c "
         php artisan migrate --force &&
@@ -24,7 +24,7 @@ services:
     ports:
       - "80:80"
     volumes:
-      - public_build:/app/public/build
+      - public_build:/app
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - app
