Fix api route and docker compose

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,8 +1,6 @@
 services:
   app:
-    build:
-      context: .
-      dockerfile: Dockerfile.dev
+    image: ghcr.io/fikrifyanto/sato:latest
     container_name: sato_app
     env_file:
       - .env.development
